# zeos-verifier

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  package-lock.json  package.json  test.js  zeos.cpp  zeos_verify_proof.js
bellman/inc/groth16/: verifier.hpp
bellman/inc/groth16/bls12_381/: fp.hpp  fp12.hpp  fp2.hpp  fp6.hpp  g1.hpp  g2.hpp  pairing.hpp  scalar.hpp  subtle.hpp  util.hpp
bellman/src/groth16/: verifier.cpp
bellman/src/groth16/bls12_381/: fp.cpp  fp12.cpp  fp2.cpp  fp6.cpp  g1.cpp  g2.cpp  pairing.cpp  scalar.cpp  subtle.cpp  util.cpp
cpp-verifier/: Makefile  test.js  zeos_groth16.js  zeos_groth16.wasm  zeos_verify_groth16.js
local_verifier/: package-lock.json  package.json  zeos_verify_proof.js
src/: lib.rs
