[package]
name = "zeos_verifier"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
rustzeos = { version = "0.1.0", path = "../rustzeos"}#, features = ["multicore"]}
wasm-bindgen = { version = "0.2.79" }

[dev-dependencies]
halo2_proofs = { version = "0.2", path = "../halo2/halo2_proofs" }
bellman = { version = "0.13.1", path = "../bellman" }
bls12_381 = { version = "0.7" }
rand = "0.8"
sha2 = "0.9.5"
ff = "0.12"
